service/cafe-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: coffee-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: DNS
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: coffee
          servicePort: 80
